Fixed overflow caused by Navbar
Added padding-bottom: 70px to .recipeBox

--- a/app/styles/recipebox.scss
+++ b/app/styles/recipebox.scss
@@ -104,6 +104,7 @@ html, body {
 .recipeBox {
 	height: auto;
 	color: $recipesHeaderColor;
+	padding-bottom: 70px;
 
 	h1 {
 		margin: 0;
